Colab을 통해 생성됨

--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -7,7 +7,7 @@
       "machine_shape": "hm",
       "gpuType": "T4",
       "mount_file_id": "1wfJLzbcBor2Y2t3N3WOXBJ2b-JZnvdpw",
-      "authorship_tag": "ABX9TyOPt6YJra2ADf7/sBh+VDVP",
+      "authorship_tag": "ABX9TyOKRk3xvL/ClAOHyDc/6op4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3308,6 +3308,8 @@
         "model_mono.eval()\n",
         "true_mono_train = []\n",
         "pred_mono_train = []\n",
+        "yes_mono_train = []\n",
+        "drug_mono_train = []\n",
         "loss_values_mono_train = []\n",
         "with torch.no_grad():\n",
         "    for j, (v_educt, v_ligand, v_solvent, prod) in enumerate(train_dataset):\n",
@@ -3324,9 +3326,13 @@
         "        true_mono_train.append(mono.to('cpu').detach().numpy())\n",
         "        pred_mono_train.append(score.to('cpu').detach().numpy())\n",
         "        loss_values_mono_train.append(test_loss.to('cpu').detach().numpy())\n",
+        "        yes_mono_train.append(yes.to('cpu').detach().numpy())\n",
+        "        drug_mono_train.append(drug.to('cpu').detach().numpy())\n",
         "\n",
         "true_mono_val = []\n",
         "pred_mono_val = []\n",
+        "yes_mono_val = []\n",
+        "drug_mono_val = []\n",
         "loss_values_mono_val = []\n",
         "with torch.no_grad():\n",
         "    for j, (v_educt, v_ligand, v_solvent, prod) in enumerate(val_dataset):\n",
@@ -3343,9 +3349,13 @@
         "        true_mono_val.append(mono.to('cpu').detach().numpy())\n",
         "        pred_mono_val.append(score.to('cpu').detach().numpy())\n",
         "        loss_values_mono_val.append(test_loss.to('cpu').detach().numpy())\n",
+        "        yes_mono_val.append(yes.to('cpu').detach().numpy())\n",
+        "        drug_mono_val.append(drug.to('cpu').detach().numpy())\n",
         "\n",
         "true_mono_test = []\n",
         "pred_mono_test = []\n",
+        "yes_mono_test = []\n",
+        "drug_mono_test = []\n",
         "loss_values_mono_test = []\n",
         "with torch.no_grad():\n",
         "    for j, (v_educt, v_ligand, v_solvent, prod) in enumerate(test_dataset):\n",
@@ -3361,12 +3371,14 @@
         "        test_loss = criterion(score, non.unsqueeze(0))\n",
         "        true_mono_test.append(mono.to('cpu').detach().numpy())\n",
         "        pred_mono_test.append(score.to('cpu').detach().numpy())\n",
-        "        loss_values_mono_test.append(test_loss.to('cpu').detach().numpy())"
+        "        loss_values_mono_test.append(test_loss.to('cpu').detach().numpy())\n",
+        "        yes_mono_test.append(yes.to('cpu').detach().numpy())\n",
+        "        drug_mono_test.append(drug.to('cpu').detach().numpy())"
       ],
       "metadata": {
         "id": "YriYfV-a0P3V"
       },
-      "execution_count": 220,
+      "execution_count": 228,
       "outputs": []
     },
     {
@@ -3376,12 +3388,14 @@
         "mono_base_df['true'] = true_mono_train + true_mono_val + true_mono_test\n",
         "mono_base_df['pred'] = pred_mono_train + pred_mono_val + pred_mono_test\n",
         "mono_base_df['loss'] = loss_values_mono_train + loss_values_mono_val + loss_values_mono_test #평균용\n",
+        "mono_base_df['yes'] = yes_mono_train + yes_mono_val + yes_mono_test\n",
+        "mono_base_df['drug'] = drug_mono_train + drug_mono_val + drug_mono_test\n",
         "mono_base_df.to_csv('/content/drive/MyDrive/2024_modeling/mono_base_result.csv')"
       ],
       "metadata": {
         "id": "xw_m1icL1PhR"
       },
-      "execution_count": 221,
+      "execution_count": 229,
       "outputs": []
     },
     {
@@ -3798,6 +3812,8 @@
         "model_di.eval()\n",
         "true_di_train = []\n",
         "pred_di_train = []\n",
+        "yes_di_train = []\n",
+        "drug_di_train = []\n",
         "loss_values_di_train = []\n",
         "with torch.no_grad():\n",
         "    for j, (v_educt, v_ligand, v_solvent, prod) in enumerate(train_dataset):\n",
@@ -3814,9 +3830,13 @@
         "        true_di_train.append(di.to('cpu').detach().numpy())\n",
         "        pred_di_train.append(score.to('cpu').detach().numpy())\n",
         "        loss_values_di_train.append(test_loss.to('cpu').detach().numpy())\n",
+        "        yes_di_train.append(yes.to('cpu').detach().numpy())\n",
+        "        drug_di_train.append(drug.to('cpu').detach().numpy())\n",
         "\n",
         "true_di_val = []\n",
         "pred_di_val = []\n",
+        "yes_di_val = []\n",
+        "drug_di_val = []\n",
         "loss_values_di_val = []\n",
         "with torch.no_grad():\n",
         "    for j, (v_educt, v_ligand, v_solvent, prod) in enumerate(val_dataset):\n",
@@ -3833,9 +3853,13 @@
         "        true_di_val.append(di.to('cpu').detach().numpy())\n",
         "        pred_di_val.append(score.to('cpu').detach().numpy())\n",
         "        loss_values_di_val.append(test_loss.to('cpu').detach().numpy())\n",
+        "        yes_di_val.append(yes.to('cpu').detach().numpy())\n",
+        "        drug_di_val.append(drug.to('cpu').detach().numpy())\n",
         "\n",
         "true_di_test = []\n",
         "pred_di_test = []\n",
+        "yes_di_test = []\n",
+        "drug_di_test = []\n",
         "loss_values_di_test = []\n",
         "with torch.no_grad():\n",
         "    for j, (v_educt, v_ligand, v_solvent, prod) in enumerate(test_dataset):\n",
@@ -3852,17 +3876,21 @@
         "        true_di_test.append(di.to('cpu').detach().numpy())\n",
         "        pred_di_test.append(score.to('cpu').detach().numpy())\n",
         "        loss_values_di_test.append(test_loss.to('cpu').detach().numpy())\n",
+        "        yes_di_test.append(yes.to('cpu').detach().numpy())\n",
+        "        drug_di_test.append(drug.to('cpu').detach().numpy())\n",
         "\n",
         "di_base_df = pd.DataFrame()\n",
         "di_base_df['true'] = true_di_train + true_di_val + true_di_test\n",
         "di_base_df['pred'] = pred_di_train + pred_di_val + pred_di_test\n",
         "di_base_df['loss'] = loss_values_di_train + loss_values_di_val + loss_values_di_test #평균용\n",
+        "di_base_df['yes'] = yes_di_train + yes_di_val + yes_di_test\n",
+        "di_base_df['drug'] = drug_di_train + drug_di_val + drug_di_test\n",
         "di_base_df.to_csv('/content/drive/MyDrive/2024_modeling/di_base_result.csv')"
       ],
       "metadata": {
         "id": "LP55D9Ws2QWq"
       },
-      "execution_count": 225,
+      "execution_count": 230,
       "outputs": []
     },
     {
@@ -4278,6 +4306,8 @@
         "model_non.eval()\n",
         "true_non_train = []\n",
         "pred_non_train = []\n",
+        "yes_non_train = []\n",
+        "drug_non_train = []\n",
         "loss_values_non_train = []\n",
         "with torch.no_grad():\n",
         "    for j, (v_educt, v_ligand, v_solvent, prod) in enumerate(train_dataset):\n",
@@ -4294,9 +4324,13 @@
         "        true_non_train.append(non.to('cpu').detach().numpy())\n",
         "        pred_non_train.append(score.to('cpu').detach().numpy())\n",
         "        loss_values_non_train.append(test_loss.to('cpu').detach().numpy())\n",
+        "        yes_non_train.append(yes.to('cpu').detach().numpy())\n",
+        "        drug_non_train.append(drug.to('cpu').detach().numpy())\n",
         "\n",
         "true_non_val = []\n",
         "pred_non_val = []\n",
+        "yes_non_val = []\n",
+        "drug_non_val = []\n",
         "loss_values_non_val = []\n",
         "with torch.no_grad():\n",
         "    for j, (v_educt, v_ligand, v_solvent, prod) in enumerate(val_dataset):\n",
@@ -4313,9 +4347,13 @@
         "        true_non_val.append(non.to('cpu').detach().numpy())\n",
         "        pred_non_val.append(score.to('cpu').detach().numpy())\n",
         "        loss_values_non_val.append(test_loss.to('cpu').detach().numpy())\n",
+        "        yes_non_val.append(yes.to('cpu').detach().numpy())\n",
+        "        drug_non_val.append(drug.to('cpu').detach().numpy())\n",
         "\n",
         "true_non_test = []\n",
         "pred_non_test = []\n",
+        "yes_non_test = []\n",
+        "drug_non_test = []\n",
         "loss_values_non_test = []\n",
         "with torch.no_grad():\n",
         "    for j, (v_educt, v_ligand, v_solvent, prod) in enumerate(test_dataset):\n",
@@ -4332,17 +4370,21 @@
         "        true_non_test.append(non.to('cpu').detach().numpy())\n",
         "        pred_non_test.append(score.to('cpu').detach().numpy())\n",
         "        loss_values_non_test.append(test_loss.to('cpu').detach().numpy())\n",
+        "        yes_non_test.append(yes.to('cpu').detach().numpy())\n",
+        "        drug_non_test.append(drug.to('cpu').detach().numpy())\n",
         "\n",
         "non_base_df = pd.DataFrame()\n",
         "non_base_df['true'] = true_non_train + true_non_val + true_non_test\n",
         "non_base_df['pred'] = pred_non_train + pred_non_val + pred_non_test\n",
         "non_base_df['loss'] = loss_values_non_train + loss_values_non_val + loss_values_non_test #평균용\n",
+        "non_base_df['yes'] = yes_non_train + yes_non_val + yes_non_test\n",
+        "non_base_df['drug'] = drug_non_train + drug_non_val + drug_non_test\n",
         "non_base_df.to_csv('/content/drive/MyDrive/2024_modeling/non_base_result.csv')"
       ],
       "metadata": {
         "id": "CTV8zMm53s_V"
       },
-      "execution_count": 227,
+      "execution_count": 231,
       "outputs": []
     },
     {
@@ -4354,6 +4396,50 @@
       "metadata": {
         "id": "8AeBSbZUmDp-"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_dict_atom = {}\n",
+        "ATOMTYPES = [\"H\",\"C\",\"N\",\"O\",\"F\",\"P\",\"S\",\"Cl\",\"Br\",\"I\"]\n",
+        "list_counter_atom = Counter(ATOMTYPES)\n",
+        "\n",
+        "for idx, x in enumerate(list_counter_atom):\n",
+        "    list_dict_atom[x] = idx\n",
+        "\n",
+        "list_dict_qmlatom = {}\n",
+        "QML_ATOMTYPES = [\"X\",\"H\",\"C\",\"N\",\"O\",\"F\",\"P\",\"S\",\"Cl\",\"Br\",\"I\"]\n",
+        "list_counter_qmlatom = Counter(QML_ATOMTYPES)\n",
+        "\n",
+        "for idx, x in enumerate(list_counter_qmlatom):\n",
+        "    list_dict_qmlatom[x] = idx\n",
+        "\n",
+        "list_dict_ring = {}\n",
+        "IS_RING = [\"True\",\"False\"]\n",
+        "list_counter_ring = Counter(IS_RING)\n",
+        "\n",
+        "for idx, x in enumerate(list_counter_ring):\n",
+        "    list_dict_ring[x] = idx\n",
+        "\n",
+        "list_dict_aroma = {}\n",
+        "AROMATOCITY = [\"True\",\"False\"]\n",
+        "list_counter_aroma = Counter(AROMATOCITY)\n",
+        "\n",
+        "for idx, x in enumerate(list_counter_aroma):\n",
+        "    list_dict_aroma[x] = idx\n",
+        "\n",
+        "list_dict_hybrid = {}\n",
+        "HYBRIDISATIONS = [\"SP3\",\"SP2\",\"SP\",\"UNSPECIFIED\",\"S\"]\n",
+        "list_counter_hybrid = Counter(HYBRIDISATIONS)\n",
+        "\n",
+        "for idx, x in enumerate(list_counter_hybrid):\n",
+        "    list_dict_hybrid[x] = idx"
+      ],
+      "metadata": {
+        "id": "eA2_zlYi51jS"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4374,6 +4460,11 @@
         "\n",
         "        dropout = 0.1\n",
         "        self.dropout = nn.Dropout(dropout)\n",
+        "\n",
+        "        self.atom_em = nn.Embedding(num_embeddings=10, embedding_dim=self.embeddings_dim)\n",
+        "        self.ring_em = nn.Embedding(num_embeddings=2, embedding_dim=self.embeddings_dim)\n",
+        "        self.hybr_em = nn.Embedding(num_embeddings=4, embedding_dim=self.embeddings_dim)\n",
+        "        self.arom_em = nn.Embedding(num_embeddings=2, embedding_dim=self.embeddings_dim)\n",
         "\n",
         "    def forward(self, data):\n",
         "        # print"
