Colab을 통해 생성됨

--- a/Graph_replicate.ipynb
+++ b/Graph_replicate.ipynb
@@ -7,7 +7,7 @@
       "machine_shape": "hm",
       "gpuType": "T4",
       "mount_file_id": "1ZW39LEJJ9vxT-UqgKrvvzwFVYDPv2xgP",
-      "authorship_tag": "ABX9TyP/SyLmxqR+BMebDoV4jp03",
+      "authorship_tag": "ABX9TyOmHDNth1/2qbX+Uu5Ghngv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,30 +194,33 @@
       "cell_type": "code",
       "source": [
         "for atom in molecule.GetAtoms():\n",
-        "    print(atom.GetSymbol())"
+        "    #print(atom.GetSymbol())\n",
+        "    #print(atom.GetNeighbors())\n",
+        "    #print(atom.GetFormalCharge())\n",
+        "    print(atom.GetSymbol(), atom_mapping[atom.GetSymbol()])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "J7InyPFqwv8O",
-        "outputId": "a52b03a7-1ead-435e-84b4-b04721da26a4"
+        "outputId": "b8fc5a26-0709-4b00-8676-bdbe7fd263e4"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "C\n",
-            "N\n",
-            "C\n",
-            "C\n",
-            "C\n",
-            "O\n",
-            "C\n",
-            "C\n",
-            "C\n"
+            "C 0\n",
+            "N 1\n",
+            "C 0\n",
+            "C 0\n",
+            "C 0\n",
+            "O 2\n",
+            "C 0\n",
+            "C 0\n",
+            "C 0\n"
           ]
         }
       ]
