Colab을 통해 생성됨

--- a/Graph_reconstruction.ipynb
+++ b/Graph_reconstruction.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMKjaK2XjAEceMtEp3mqER+",
+      "authorship_tag": "ABX9TyPU+QOmfLr0OV4BezaZHDkg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "* 화학식을 graph로 전처리하는 것  \n",
         "* 주로 SMILES>mol>특성추출의 과정을 거친다  \n",
         "* 추출된 특성은 원자의 경우 node로, 결합의 경우 edge로 간다  \n",
-        "* 특성 중 숫자가 아닌 것들(예: C, SP3 등) 은 encoding 과정을 거쳐서 숫자로 변환된 후 이동한다. encoding에는 주로 one-hot 사용 https://coduking.tistory.com/entry/%EC%9B%90-%ED%95%AB-%EC%9D%B8%EC%BD%94%EB%94%A9-pdgetdummies-vs-OneHotEncoder"
+        "* 특성 중 숫자가 아닌 것들(예: C, SP3 등) 은 encoding 과정을 거쳐서 숫자로 변환된 후 이동한다. encoding에는 one-hot 및 label 사용 https://coduking.tistory.com/entry/%EC%9B%90-%ED%95%AB-%EC%9D%B8%EC%BD%94%EB%94%A9-pdgetdummies-vs-OneHotEncoder"
       ],
       "metadata": {
         "id": "BsxvcjkyWi28"
@@ -49,7 +49,9 @@
         "그래프는 dgl이냐 torch geometric이냐  \n",
         "https://pytorch-geometric.readthedocs.io/en/latest/modules/utils.html#torch_geometric.utils.from_smiles    \n",
         "https://pytorch-geometric.readthedocs.io/en/latest/_modules/torch_geometric/utils/smiles.html#from_smiles  \n",
-        "Converts a SMILES string to a torch_geometric.data.Data instance.\n",
+        "Converts a SMILES string to a torch_geometric.data.Data instance.  \n",
+        "\n",
+        "1, 0, 0, ... 이 아닌 1, 2, 3, ... 주로 사용\n",
         "\n",
         "Parameters\n",
         ":\n",
@@ -59,7 +61,7 @@
         "\n",
         "* kekulize (bool, optional) – If set to True, converts aromatic bonds to single/double bonds. (default: False)  \n",
         "  \n",
-        "해당 함수를 그대로 쓸 것인가 customize한 함수를 만들 것인가"
+        "해당 함수를 그대로 쓸 것인가 customize한 함수(예:1, 0, 0, ... )를 만들 것인가"
       ],
       "metadata": {
         "id": "YhGmBSIpeUDl"
@@ -456,15 +458,41 @@
     {
       "cell_type": "code",
       "source": [
+        "graph"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4y-C8R_oLJbL",
+        "outputId": "0b4fac51-daff-46ee-cb8d-fe8d3e8fbcea"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Data(x=[2, 9], edge_index=[2, 2], edge_attr=[2, 3], smiles='CC')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "type(graph)"
       ],
       "metadata": {
-        "id": "gEVPfkz9JyU1",
-        "outputId": "0e020259-5ce6-4aef-f2ba-4f381827a75f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 186
-        }
+        },
+        "id": "gEVPfkz9JyU1",
+        "outputId": "0e020259-5ce6-4aef-f2ba-4f381827a75f"
       },
       "execution_count": 8,
       "outputs": [
