--- a/Graph_reconstruction.ipynb
+++ b/Graph_reconstruction.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPU+QOmfLr0OV4BezaZHDkg",
+      "authorship_tag": "ABX9TyP4V/kKQleC8qmixGeJL1Sd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,9 @@
         "\n",
         "* kekulize (bool, optional) – If set to True, converts aromatic bonds to single/double bonds. (default: False)  \n",
         "  \n",
-        "해당 함수를 그대로 쓸 것인가 customize한 함수(예:1, 0, 0, ... )를 만들 것인가"
+        "해당 함수를 그대로 쓸 것인가 customize한 함수(예:1, 0, 0, ... )를 만들 것인가  \n",
+        "\n",
+        "0을 최소화하기 위함인가?"
       ],
       "metadata": {
         "id": "YhGmBSIpeUDl"
@@ -69,13 +71,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0X62t1y9WfyC",
-        "outputId": "924c6492-f419-46ae-b71f-914ae18c06b8"
+        "outputId": "33630429-936d-4a27-a482-12d33a4f8f8a"
       },
       "outputs": [
         {
@@ -87,18 +89,18 @@
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from rdkit) (1.26.4)\n",
             "Requirement already satisfied: Pillow in /usr/local/lib/python3.10/dist-packages (from rdkit) (9.4.0)\n",
             "Downloading rdkit-2024.3.5-cp310-cp310-manylinux_2_28_x86_64.whl (33.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.1/33.1 MB\u001b[0m \u001b[31m61.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.1/33.1 MB\u001b[0m \u001b[31m50.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: rdkit\n",
             "Successfully installed rdkit-2024.3.5\n",
             "Collecting torch_geometric\n",
             "  Downloading torch_geometric-2.5.3-py3-none-any.whl.metadata (64 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m64.2/64.2 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m64.2/64.2 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from torch_geometric) (4.66.5)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from torch_geometric) (1.26.4)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from torch_geometric) (1.13.1)\n",
             "Requirement already satisfied: fsspec in /usr/local/lib/python3.10/dist-packages (from torch_geometric) (2024.6.1)\n",
             "Requirement already satisfied: jinja2 in /usr/local/lib/python3.10/dist-packages (from torch_geometric) (3.1.4)\n",
-            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.10/dist-packages (from torch_geometric) (3.10.2)\n",
+            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.10/dist-packages (from torch_geometric) (3.10.3)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from torch_geometric) (2.32.3)\n",
             "Requirement already satisfied: pyparsing in /usr/local/lib/python3.10/dist-packages (from torch_geometric) (3.1.2)\n",
             "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.10/dist-packages (from torch_geometric) (1.3.2)\n",
@@ -118,25 +120,25 @@
             "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from scikit-learn->torch_geometric) (1.4.2)\n",
             "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn->torch_geometric) (3.5.0)\n",
             "Downloading torch_geometric-2.5.3-py3-none-any.whl (1.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m12.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m19.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: torch_geometric\n",
             "Successfully installed torch_geometric-2.5.3\n",
             "Looking in links: https://data.pyg.org/whl/torch-2.3.0+cu121.html\n",
             "Collecting pyg_lib\n",
             "  Downloading https://data.pyg.org/whl/torch-2.3.0%2Bcu121/pyg_lib-0.4.0%2Bpt23cu121-cp310-cp310-linux_x86_64.whl (2.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m23.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m23.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting torch_scatter\n",
             "  Downloading https://data.pyg.org/whl/torch-2.3.0%2Bcu121/torch_scatter-2.1.2%2Bpt23cu121-cp310-cp310-linux_x86_64.whl (10.9 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.9/10.9 MB\u001b[0m \u001b[31m106.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.9/10.9 MB\u001b[0m \u001b[31m105.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting torch_sparse\n",
             "  Downloading https://data.pyg.org/whl/torch-2.3.0%2Bcu121/torch_sparse-0.6.18%2Bpt23cu121-cp310-cp310-linux_x86_64.whl (5.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m101.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m56.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting torch_cluster\n",
             "  Downloading https://data.pyg.org/whl/torch-2.3.0%2Bcu121/torch_cluster-1.6.3%2Bpt23cu121-cp310-cp310-linux_x86_64.whl (3.4 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.4/3.4 MB\u001b[0m \u001b[31m51.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.4/3.4 MB\u001b[0m \u001b[31m21.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting torch_spline_conv\n",
             "  Downloading https://data.pyg.org/whl/torch-2.3.0%2Bcu121/torch_spline_conv-1.2.2%2Bpt23cu121-cp310-cp310-linux_x86_64.whl (947 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m947.1/947.1 kB\u001b[0m \u001b[31m49.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m947.1/947.1 kB\u001b[0m \u001b[31m29.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from torch_sparse) (1.13.1)\n",
             "Requirement already satisfied: numpy<2.3,>=1.22.4 in /usr/local/lib/python3.10/dist-packages (from scipy->torch_sparse) (1.26.4)\n",
             "Installing collected packages: torch_spline_conv, torch_scatter, pyg_lib, torch_sparse, torch_cluster\n",
@@ -429,6 +431,8 @@
         "from rdkit import Chem\n",
         "import torch_geometric\n",
         "from torch_geometric.data import Data\n",
+        "import torch\n",
+        "\n",
         "\n",
         "# atom list: atom prop 넣기 RDKit으로 계산할 수 있는 Atom의 속성은 아래 링크에서 확인할 수 있다.\n",
         "# https://www.rdkit.org/docs/source/rdkit.Chem.rdchem.html#rdkit.Chem.rdchem.Atom\n",
@@ -439,7 +443,7 @@
       "metadata": {
         "id": "_0bC3fuUrWVr"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -452,7 +456,7 @@
       "metadata": {
         "id": "xg-tlXIeJgBZ"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -465,9 +469,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4y-C8R_oLJbL",
-        "outputId": "0b4fac51-daff-46ee-cb8d-fe8d3e8fbcea"
+        "outputId": "cfc60be6-93bb-459d-dc9a-b83ea9df6c45"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -477,9 +481,18 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "graph에 y value 포함? 굳이 그럴 필요는 없음>>넣어보자"
+      ],
+      "metadata": {
+        "id": "GesLvf2ur8_S"
+      }
     },
     {
       "cell_type": "code",
@@ -492,9 +505,9 @@
           "height": 186
         },
         "id": "gEVPfkz9JyU1",
-        "outputId": "0e020259-5ce6-4aef-f2ba-4f381827a75f"
+        "outputId": "ac3dff9e-8f32-480b-e95a-80a3b63c2cad"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -585,9 +598,225 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 5
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "일단 하나하나씩 custom?  \n",
+        "  \n",
+        "데이터셋에 따라 유동적으로 할 수 있을까? >> 이럴려면 데이터셋을 읽고 값들 (예 : 'hybridization': [\n",
+        "        'UNSPECIFIED',\n",
+        "        'S',\n",
+        "        'SP',\n",
+        "        'SP2',\n",
+        "        'SP3',\n",
+        "        'SP3D',\n",
+        "        'SP3D2',\n",
+        "        'OTHER',\n",
+        "    ])을 추출 후 set을 만들고 dict 같은 거를 재구성해야 할 것. dataset의 해당 값들을 추출하려면?\n",
+        "\n",
+        "graph 및 layer는 어디까지 custom?  \n",
+        "layer custom은 논문이나 ref code 기반으로 해야 할 것"
+      ],
+      "metadata": {
+        "id": "Xb7Y8SoBL9Mx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "이미 만들어진 그래프에 속성을 추가해보기"
+      ],
+      "metadata": {
+        "id": "ALCM_p3g66tM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "graph.y = torch.tensor([0, 0, 0])"
+      ],
+      "metadata": {
+        "id": "BRsNaNV566Sg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.tensor([0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zH5grlDj7b1O",
+        "outputId": "80b0f2a2-1abc-46b0-8d46-3243ac32f7ba"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "graph #요거 찍으면 size가 나옴. not value"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sosvJm0t7X_u",
+        "outputId": "10503ec6-0852-4c78-882d-f64afb3f67a8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Data(x=[2, 9], edge_index=[2, 2], edge_attr=[2, 3], smiles='CC', y=[3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "graph.y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uKFlC2q58IIC",
+        "outputId": "4247ad93-44f6-4cee-a9b5-5f0eece74cf4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "graph['y']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bigkOjmP8REV",
+        "outputId": "58a95d4b-7f9e-4ae9-b2e5-055b814f60f4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "그래프 y value는 길이? 그게 아님.   \n",
+        "y값을 확인하려면 graph['y'] 혹은 graph.y  \n",
+        "그래프 객체 찍기보단 이게 편함.  \n",
+        "모든 값을 확인하려면?"
+      ],
+      "metadata": {
+        "id": "4DDUDe9f7m_s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for key, item in graph:\n",
+        "    print(f'{key} : {item}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j11TGC9p8e-S",
+        "outputId": "84b81829-3993-479d-bf46-ff44293ade0e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x : tensor([[6, 0, 4, 5, 3, 0, 4, 0, 0],\n",
+            "        [6, 0, 4, 5, 3, 0, 4, 0, 0]])\n",
+            "edge_index : tensor([[0, 1],\n",
+            "        [1, 0]])\n",
+            "edge_attr : tensor([[1, 0, 0],\n",
+            "        [1, 0, 0]])\n",
+            "smiles : CC\n",
+            "y : tensor([0, 0, 0])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "x: 원자 성질 크기는 원자 갯수 by 특성 갯수  \n",
+        "Node feature matrix with shape [num_nodes, num_node_features]   \n",
+        "edge_index:  \n",
+        "data.edge_index: Graph connectivity in COO format with shape [2, num_edges] and type torch.long  \n",
+        "edge_attr:  \n",
+        "data.edge_attr: Edge feature matrix with shape [num_edges, num_edge_features]\n",
+        "   \n",
+        "   smiles: SMILES  \n",
+        "y: endpoint"
+      ],
+      "metadata": {
+        "id": "C-MdtOFG86By"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_j2Mmb_R85Kq"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
